--- a/lib/main.css
+++ b/lib/main.css
@@ -1,1 +1,2 @@
-.form-group{margin-bottom:1rem}.text-label{display:block;color:#212529}.text-input{display:inline-block;margin-bottom:.5rem;font-size:16px;font-weight:400;color:#212529}
+.form-group{margin-bottom:1rem}.text-input{display:inline-block;margin-bottom:.5rem;font-size:16px;font-weight:400;color:#212529}.text-label{display:block;color:#212529}
+.btn{padding:10px 15px}.btn-red{background-color:red}
